--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,22 +4,19 @@ on:
   workflow_dispatch:
   schedule:
   - cron: "0 2 * * 1-5"
-  
-env:
-  # Setting an environment variable with the value of a configuration variable
-  PARENT_FORK_NAME: ${{ vars.PARENT_FORK_NAME }}
+
 jobs:
   sync_repo_job:
     name: Sync Repo Job
     runs-on: ubuntu-latest
     env:
-      GH_TOKEN: ${{ secrets.SYNC_PAT_TOKEN }}
+      GH_TOKEN: ${{ github.token }}
     steps:
-      - uses: actions/checkout@v4.0.0
+      - uses: actions/checkout@v2
         with:
           fetch-depth: 0
       - name: Run GitHub Repo Sync
         run: |
-          echo "Parent Fork: $PARENT_FORK_NAME"
+          echo "Fork: $GITHUB_REPOSITORY"
           echo "Branch Name: $GITHUB_REF_NAME"
-          gh repo sync $PARENT_FORK_NAME -b $GITHUB_REF_NAME
+          gh repo sync $GITHUB_REPOSITORY -b $GITHUB_REF_NAME
